# PaperFlux

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
docs/: _config.yml  index.md
prompts/: rag_category_prompt.j2  rag_category_system_prompt.txt  rag_summary_prompt.j2
src/: __init__.py  assistants.py  cli.py  config.py  io_pdf.py  orchestrator.py  quote_locator.py  utils.py
src/paperflux/: __init__.py  assistants.py  cli.py  config.py  io_pdf.py  orchestrator.py  quote_locator.py
src/paperflux/providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py
src/paperflux/templates/: config.yaml
src/paperflux/templates/prompts/: rag_category_system_prompt.txt  rag_category_system_prompt_anthropic.txt  rag_summary_prompt.j2
tests/: test_cli_integration.py  test_config_parse.py  test_quote_locator.py
