[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paperflux"
version = "3.4.20260528"
description = "AI-powered PDF annotation for research papers"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "PaperFlux contributors" },
]
keywords = ["annotation", "anthropic", "claude", "openai", "papers", "pdf", "research"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "openai>=2.38.0",
    "anthropic>=0.69",
    "typer>=0.15.4",
    "PyMuPDF>=1.24",
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "rich>=13.7",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
]

[project.scripts]
paperflux = "paperflux.cli:run"

[project.urls]
Documentation = "https://ehabets.github.io/PaperFlux/"
Homepage = "https://github.com/ehabets/PaperFlux"
Issues = "https://github.com/ehabets/PaperFlux/issues"
Source = "https://github.com/ehabets/PaperFlux"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
paperflux = [
    "templates/config.yaml",
    "templates/prompts/*.j2",
    "templates/prompts/*.txt",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
